2012-08-01 belangeo <belangeo@gmail.com>

    * Added new object: LogTable: Construct a table from logarithmic segments in breakpoint fashion.
    - rev 1013

2012-07-31 belangeo <belangeo@gmail.com>

    * Added new object: Balance: Adjust rms power of an audio signal according to the rms power of another.
    - rev 1012

-------------------------------------------------------------------------------------

2012-06-30 belangeo <belangeo@gmail.com>

    * Added new object: CtlScan2. Scan for Midi controller number and Midi channel in input.
    - rev 1007

2012-06-26 belangeo <belangeo@gmail.com>

    * Added "offline_nb" mode to the Server, allowing non-blocking bounce to disk.
    - rev 1004

2012-06-13 belangeo <belangeo@gmail.com>

    * Fixed issue 34 : Better handling of type exceptions for arguments waiting for PyoObject, PyoTableObject or list.
    - rev 1000

2012-06-08 belangeo <belangeo@gmail.com>

    * Added ChebyTable.getNormTable() method to retrieve the normalization function for the current polynomial.
    - rev 996

2012-05-31 belangeo <belangeo@gmail.com>

    * E-Pyo now creates its resources folder in the user home directory.
    - rev 991

2012-05-30 belangeo <belangeo@gmail.com>

    * Fixed PyoObject.set() method bug.
    - rev 987

2012-05-26 belangeo <belangeo@gmail.com>

    * Added new function: savefileFromTable(). Used internally by PyoTableObject to save sound to disk.
    - rev 983

2012-05-25 belangeo <belangeo@gmail.com>

    * Added two methods to PyoObject class: isPlaying() and isOutputting().
    - rev 979

2012-05-25 belangeo <belangeo@gmail.com>

    * Added debugging methods utilities: Server.getStreams(), Server.getNumberOfStreams() and Stream.getStreamObject().
    - rev 977

2012-05-24 belangeo <belangeo@gmail.com>

    * Fixed memory leak on object's deletion (refcount was always one more than expected).
    - rev 974

2012-05-10 belangeo <belangeo@gmail.com>
